# mdf4-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL  LICENSING.md  README.md
.githooks/: pre-commit
.github/workflows/: mdf4-rs.yml
benches/: index_benchmark.rs
examples/: can_logging.rs  ethernet_logging.rs  flexray_logging.rs  index_operations.rs  no_std_write.rs
src/: can.rs  channel.rs  cut.rs  error.rs  index.rs  lib.rs  mdf.rs  merge.rs  types.rs
src/blocks/: channel_block.rs  channel_group_block.rs  common.rs  data_block.rs  data_group_block.rs  data_list_block.rs  event_block.rs  file_history_block.rs  header_block.rs  hl_block.rs  identification_block.rs  metadata_block.rs  mod.rs  signal_data_block.rs  source_block.rs  text_block.rs
src/blocks/conversion/: base.rs  bitfield.rs  formula.rs  linear.rs  logic.rs  simple_test.rs  table_lookup.rs  test_deep_chains.rs  text.rs  types.rs
src/can/: dbc_compat.rs  dbc_logger.rs  dbc_overlay.rs  fd.rs  mod.rs  raw_logger.rs  timestamped_frame.rs
src/can/dbc_logger/: builder.rs  mod.rs
src/ethernet/: raw_logger.rs
src/parsing/: decoder.rs  mdf_file.rs  mod.rs  raw_channel.rs  raw_channel_group.rs  raw_data_group.rs
src/writer/: data.rs  init.rs  io.rs  mod.rs  streaming.rs
tests/: api.rs  blocks.rs  can_integration.rs  data_files.rs  enhanced_index_conversions.rs  index.rs  test_invalidation_bits.rs
tests/can_integration/: dbc_integration.rs  dbc_logger.rs  extended_id_integration.rs  fd_integration.rs  main.rs  raw_integration.rs
