[package]
name = "mdf4-rs"
version = "0.1.0-alpha.1"
edition = "2024"
description = "mdf4-rs is a Rust library for working with Measurement Data Format (ASAM MDF4) files."
license = "MIT"
repository = "https://github.com/reneherrero/mdf4-rs"
readme = "README.md"
exclude = ["examples/", "tests/", "benches/"]

[features]
default = ["std", "can", "dbc"]
std = ["alloc", "serde", "serde_json"]
alloc = []
serde = ["dep:serde"]
can = ["dep:embedded-can"]
dbc = ["dep:dbc-rs", "alloc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
], optional = true }
serde_json = { version = "1.0", optional = true }
embedded-can = { version = "0.4", optional = true }
dbc-rs = { path = "../dbc-rs/dbc", default-features = false, features = [
    "alloc",
], optional = true }

[dev-dependencies]
criterion = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
embedded-can = "0.4"
dbc-rs = { path = "../dbc-rs/dbc", default-features = false, features = [
    "alloc",
] }

[[bench]]
name = "index_benchmark"
harness = false
