[package]
name = "mdf4-rs"
version = "0.1.0-rc.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["mdf4-rs contributors"]
repository = "https://github.com/reneherrero/mdf4-rs"
homepage = "https://github.com/reneherrero/mdf4-rs"
rust-version = "1.85.0"
readme = "README.md"
description = "mdf4-rs is a Rust library for working with Measurement Data Format (ASAM MDF4) files."
documentation = "https://docs.rs/mdf4-rs"
keywords = ["mdf4", "can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/", "benches/"]

[features]
default = ["std", "can", "dbc"]
std = ["alloc", "serde", "serde_json"]
alloc = []
serde = ["dep:serde"]
can = ["dep:embedded-can"]
dbc = ["dep:dbc-rs", "alloc"]

[dependencies]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "alloc"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.embedded-can]
version = "0.4"
optional = true

[dependencies.dbc-rs]
version = "0.1.4"
default-features = false
features = ["alloc"]
optional = true


[dev-dependencies]

[dev-dependencies.criterion]
version = "0.5"

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.embedded-can]
version = "0.4"

[dev-dependencies.dbc-rs]
version = "0.1.3"
default-features = false
features = ["alloc"]

[[bench]]
name = "index_benchmark"
harness = false
